# OpenBase

dwb_more_critics/: CMakeLists.txt  default_critics.xml  package.xml
dwb_more_critics/include/dwb_more_critics/: alignment_util.hpp  line_iterator.hpp  rotate_to_goal_pose.hpp
dwb_more_critics/src/: alignment_util.cpp  rotate_to_goal_pose.cpp
gazebo_ros_indep_steer_drive/: CMakeLists.txt  package.xml
gazebo_ros_indep_steer_drive/include/gazebo_ros_indep_steer_drive/: indep_steer.h
gazebo_ros_indep_steer_drive/src/: gazebo_ros_indep_steer_drive.cc
gazebo_ros_omni_drive/: package.xml
gazebo_ros_omni_drive/env-hooks/: gazebo_ros_omni_drive.dsv.in
gazebo_ros_omni_drive/src/: gazebo_ros_omni_drive.cc
gazebo_ros_wheel_odometry/: CMakeLists.txt  package.xml
gazebo_ros_wheel_odometry/src/: gazebo_ros_wheel_odometry.cc
model/abstract/: model.config  model.sdf  model.sdf.xacro
model/omni_wheel/: model.sdf  model.sdf.xacro  rim.stl
openbase_gazebo_models/: CMakeLists.txt  package.xml
openbase_gazebo_models/models/damped_omni3/: model.config  model.sdf.xacro
openbase_gazebo_models/models/damped_omni4/: model.config  model.sdf.xacro
openbase_gazebo_models/models/indep_steer/: model.config  model.sdf.xacro
openbase_gazebo_models/models/multi_laser/: model.config  model.sdf.xacro
openbase_gazebo_models/models/nav_omni4/: model.config  model.sdf.xacro
openbase_gazebo_models/models/omni4/: model.config  model.sdf.xacro
openbase_gazebo_models/models/omni_wheel/: model.config  model.sdf.xacro  roller.stl
openbase_gazebo_models/models/openbase_omni3/: body_reduced.stl  model.sdf.xacro
openbase_gazebo_models/models/primitive_omni_wheel/: model.config  model.sdf.xacro  parts.sdf.xacro
openbase_gazebo_models/models/primitive_omni_wheel_test/: model.config  model.sdf
openbase_gazebo_models/models/simple_omni_wheel/: model.config  model.sdf.xacro  parts.sdf.xacro
openbase_gazebo_models/models/simplified_omni3/: model.config  model.sdf.xacro
openbase_gazebo_models/models/unicycle_wheel/: model.config  model.sdf.xacro
openbase_gazebo_models/models/unicycle_wheel_2/: model.config  model.sdf.xacro
openbase_nav2_demo/: CMakeLists.txt  package.xml
openbase_nav2_demo/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  omni4_gazebo.launch.py  omni4_simulation_launch.py  rviz_launch.py  slam_launch.py
openbase_nav2_demo/params/: nav2_params.yaml
openbase_nav2_demo/urdf/: multi_laser.urdf.xacro  nav_omni4.urdf.xacro
openbase_nav2_demo/worlds/: world_only.model
plugin/gazebo_ros_omni_drive/: CMakeLists.txt  package.xml
plugin/gazebo_ros_omni_drive/src/: gazebo_ros_omni_drive.cc
