<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openbase_gazebo_models</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="urandq@gmail.com">yoshiki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>xacr</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
